لقد عدلت رابط الصورة كي تظهر في الموقع

--- a/portfolio.html
+++ b/portfolio.html
@@ -72,6 +72,23 @@
       font-size: 16px;
       color: #666;
     }
+    button {
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+button:hover {
+  background-color: #45a049;
+}
   </style>
 </head>
 <body>
@@ -92,7 +109,7 @@
     <div class="portfolio-grid">
       <!-- مشروع 1: حملة تسويق لمتجر ملابس -->
       <div class="project-card">
-        <img class="project-image" src="C:\Users\ُELBARAA PC\OneDrive\سطح المكتب\كرت تلفون طارق\DCIM\بروجيه محل البسة\05.jpg" alt="حملة تسويق لمتجر ملابس">
+        <img class="project-image" src="https://i.imgur.com/RC8liwF.jpeg" alt="حملة تسويق لمتجر ملابس">
         <div class="project-content">
           <div class="project-title">حملة تسويق إلكتروني لمتجر ملابس</div>
           <div class="project-desc">
@@ -129,6 +146,7 @@
       </div>
     </div>
   </section>
+  <button onclick="history.back()">رجوع</button>
   <script src="script.js"></script>
 </body>
 </html>
