Update main.htmlتم تغيير الرابط القديم لأنه لم يعد يعمل، وأُضيف زر للعودة إلى الصفحة السابقة لسهولة التصفح.

--- a/main.html
+++ b/main.html
@@ -332,7 +332,7 @@ button:hover {
   
   <header class="site-header">
     <div class="logo-container">
-      <a href="index.html">
+      <a href="main.html">
         <img src="https://i.imgur.com/cUrzJJq.jpeg" alt="logo" style="border-radius: 50%; width: 350px; height: auto;">
       </a>
 
