Update contact.htmlتم تغير الرابط القديم أُضيف زر للعودة إلى الصفحة السابقة لسهولة التصفح.

--- a/contact.html
+++ b/contact.html
@@ -84,6 +84,7 @@
     .contact-info p {
       margin: 5px 0;
     }
+    
   </style>
 </head>
 <body>
@@ -116,6 +117,8 @@
       <p><strong>📍 الموقع:</strong> إسطنبول، تركيا</p>
     </div>
   </section>
+  <button onclick="history.back()">رجوع</button>
+
   <script src="script.js"></script>
 </body>
 </html>
