--- a/main.html
+++ b/main.html
@@ -15,6 +15,19 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
 
   <style>
+    /* تصميم للشاشات الكبيرة */
+body {
+  font-size: 18px;
+}
+
+/* تصميم للشاشات الصغيرة (الموبايل) */
+@media (max-width: 600px) {
+  body {
+    font-size: 16px;
+    padding: 10px;
+  }
+  /* عدل أي عناصر أخرى لتتناسب مع الموبايل */
+}
     /* === تأثيرات الظهور والانتقال === */
     @keyframes fadeInUp {
       0% {
