--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
   <!-- Swiper CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
 </head>
-<body>
+
   <style>
     footer {
       background-color: rgba(25, 25, 45, 0.88);
@@ -29,6 +29,22 @@
  
   color: white;
       font-size: 0.990rem; /* text-sm في Tailwind */
+    }
+
+    body {
+      font-size: 18px; /* الحجم الافتراضي للشاشات الكبيرة */
+      font-family: 'Droid Arabic Kufi', Tahoma, sans-serif;
+      background-color: #f9f9f9;
+      margin: 0;
+      padding: 0;
+      color: #2b2b2b;
+      background-image: url('https://images.unsplash.com/photo-1504384308090-c894fdcc538d?auto=format&fit=crop&w=1600&q=80');
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-position: center;
+      direction: rtl;
+      scroll-behavior: smooth;
     }
 
 /* === رأس الصفحة === */
@@ -273,15 +289,15 @@ header p {
     
 
     .social-links .facebook {
-      background-color: #3b5998;
+     background: linear-gradient(135deg, #9f6907, #f0cc7f);
     }
 
     .social-links .instagram {
-      background: linear-gradient(45deg, #f09433, #e6683c, #dc2743, #cc2366, #bc1888);
+      background: linear-gradient(135deg, #9f6907, #f0cc7f);
     }
 
     .social-links .tiktok {
-      background-color: #000;
+     background: linear-gradient(135deg, #9f6907, #f0cc7f);
     }
 
     .social-links a:hover {
@@ -294,7 +310,7 @@ header p {
       position: fixed;
       bottom: 20px;
       left: 20px;
-      background-color: #25d366;
+     background: linear-gradient(135deg, #9f6907, #f0cc7f);
       color: white;
       font-size: 30px;
       padding: 16px;
@@ -322,6 +338,24 @@ header p {
         padding: 18px 45px;
       }
     }
+     @keyframes fadeInUp {
+      0% {
+        opacity: 0;
+        transform: translateY(20px);
+      }
+      100% {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+    .fade-in-up {
+      animation: fadeInUp 1s ease forwards;
+      opacity: 0;
+    }
+    .fade-in-up.delay-1 { animation-delay: 0.3s; }
+    .fade-in-up.delay-2 { animation-delay: 0.6s; }
+    .fade-in-up.delay-3 { animation-delay: 0.9s; }
+
    /* تنسيق عام للجسم */
 body {
   margin: 0;
