--- a/main.html
+++ b/main.html
@@ -49,7 +49,7 @@
 
 /* === رأس الصفحة === */
 header {
-  background: linear-gradient(135deg, hsl(0, 0%, 9%));
+  background:  rgba(42, 42, 43, 0.88);
   color: white;
   padding: 30px 20px;
   text-align: center;
