--- a/contact.html
+++ b/contact.html
@@ -9,9 +9,9 @@
       font-family: 'Cairo', sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #f9f9f9;
+      background-color: #fefcf9; /* خلفية بيج لؤلؤية */
       direction: rtl;
-      color: #333;
+      color: #4b3b2f; /* بني ناعم */
     }
 
     .contact-section {
@@ -19,18 +19,22 @@
       max-width: 900px;
       margin: auto;
       text-align: center;
+      background-color: #fffdf7;
+      border-radius: 16px;
+      box-shadow: 0 8px 25px rgba(214, 190, 140, 0.15);
+      border: 1px solid #e8d6b9;
     }
 
     .contact-section h2 {
       font-size: 36px;
       margin-bottom: 15px;
-      color: #1e1e1e;
+      color: #b68d40; /* ذهبي فاخر */
     }
 
     .contact-section p {
       font-size: 18px;
       margin-bottom: 40px;
-      color: #555;
+      color: #7a6a58;
     }
 
     .contact-form {
@@ -42,11 +46,19 @@
     .contact-form input,
     .contact-form textarea {
       width: 100%;
-      padding: 12px;
-      border: 1px solid #ccc;
-      border-radius: 8px;
+      padding: 14px;
+      border: 1px solid #d9c8aa;
+      border-radius: 10px;
       font-size: 16px;
-      font-family: 'Cairo', sans-serif;
+      background-color: #fffdf9;
+      transition: border-color 0.3s;
+      color: #4b3b2f;
+    }
+
+    .contact-form input:focus,
+    .contact-form textarea:focus {
+      outline: none;
+      border-color: #b68d40;
     }
 
     .contact-form textarea {
@@ -55,10 +67,10 @@
     }
 
     .contact-form button {
-      background-color: #007BFF;
+      background-color: #b68d40;
       color: #fff;
       border: none;
-      padding: 12px 25px;
+      padding: 14px 30px;
       font-size: 18px;
       border-radius: 8px;
       cursor: pointer;
@@ -66,37 +78,56 @@
     }
 
     .contact-form button:hover {
-      background-color: #0056b3;
+      background-color: #9c7933;
     }
 
     .contact-info {
       margin-top: 60px;
       text-align: right;
       font-size: 16px;
-      color: #555;
+      color: #6e5a45;
+      background-color: #fffaf1;
+      padding: 20px;
+      border-radius: 10px;
+      border: 1px solid #e4d3b5;
     }
 
     .contact-info h3 {
-      color: #007BFF;
+      color: #b68d40;
       margin-bottom: 10px;
+      font-weight: bold;
     }
 
     .contact-info p {
-      margin: 5px 0;
+      margin: 8px 0;
     }
-    
+
+    button[onclick] {
+      margin-top: 30px;
+      background-color: #c4a766;
+      padding: 10px 20px;
+      font-size: 16px;
+      border-radius: 6px;
+      border: none;
+      color: white;
+      cursor: pointer;
+    }
+
+    button[onclick]:hover {
+      background-color: #a98a52;
+    }
   </style>
 </head>
 <body>
-    <header>
-        <nav>
-            <a href="index.html"></a>
-            <a href="about.html"></a>
-            <a href="connect.html"> </a>
-            <a href="portfolio.html"></a>
-            <a href="services.html"></a>
-          </nav>
-    </header>
+  <header>
+    <nav>
+      <a href="index.html"></a>
+      <a href="about.html"></a>
+      <a href="connect.html"> </a>
+      <a href="portfolio.html"></a>
+      <a href="services.html"></a>
+    </nav>
+  </header>
 
   <section class="contact-section" id="contact">
     <h2>تواصل معنا</h2>
@@ -117,6 +148,7 @@
       <p><strong>📍 الموقع:</strong> إسطنبول، تركيا</p>
     </div>
   </section>
+
   <button onclick="history.back()">رجوع</button>
 
   <script src="script.js"></script>
