--- a/about.html
+++ b/about.html
@@ -9,9 +9,24 @@
       font-family: 'Cairo', sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #fefefe;
-      color: #333;
       direction: rtl;
+      background: linear-gradient(135deg, #fdf6e3, #f8ecd0);
+      color: #5a4a1c;
+      position: relative;
+      overflow-x: hidden;
+    }
+
+    /* زخارف ذهبية SVG بالخلفية */
+    .bg-decoration {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 0;
+      background-image: url('https://www.transparenttextures.com/patterns/gold-scale.png');
+      opacity: 0.06;
+      background-repeat: repeat;
     }
 
     .about-section {
@@ -19,18 +34,33 @@
       max-width: 1000px;
       margin: auto;
       text-align: center;
+      position: relative;
+      z-index: 1;
     }
 
     .about-section h2 {
       font-size: 36px;
       margin-bottom: 20px;
-      color: #1e1e1e;
+      color: #b89b4f;
+      position: relative;
+    }
+
+    .about-section h2::after {
+      content: '';
+      position: absolute;
+      width: 60px;
+      height: 4px;
+      background: linear-gradient(to right, #d4af37, #b8942e);
+      bottom: -10px;
+      right: 50%;
+      transform: translateX(50%);
+      border-radius: 2px;
     }
 
     .about-section p {
       font-size: 18px;
       line-height: 1.8;
-      color: #555;
+      color: #6b5b2e;
       margin-bottom: 40px;
     }
 
@@ -40,6 +70,7 @@
       object-fit: cover;
       border-radius: 15px;
       margin-bottom: 40px;
+      border: 3px solid #d4af37;
     }
 
     .values {
@@ -50,28 +81,28 @@
     }
 
     .value-card {
-      background-color: #ffffff;
+      background-color: #fff8e1;
       padding: 25px;
       border-radius: 15px;
-      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.08);
+      box-shadow: 0 4px 15px rgba(184, 155, 79, 0.2);
       transition: 0.3s ease;
     }
 
     .value-card:hover {
       transform: translateY(-5px);
-      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 10px 25px rgba(184, 155, 79, 0.3);
     }
 
     .value-title {
       font-size: 20px;
       font-weight: bold;
       margin-bottom: 10px;
-      color: #007BFF;
+      color: #d4af37;
     }
 
     .value-desc {
       font-size: 16px;
-      color: #666;
+      color: #7c6930;
     }
 
     .vision-mission {
@@ -81,31 +112,49 @@
 
     .vision-mission h3 {
       font-size: 28px;
-      color: #1e1e1e;
+      color: #b89b4f;
       margin-bottom: 15px;
+      position: relative;
+    }
+
+    .vision-mission h3::before {
+      content: '\2728';
+      color: #d4af37;
+      margin-left: 8px;
     }
 
     .vision-mission p {
       font-size: 17px;
-      color: #555;
+      color: #5f4e1e;
       line-height: 1.8;
       margin-bottom: 30px;
       max-width: 800px;
       margin-left: auto;
       margin-right: auto;
     }
+
+    button {
+      background: linear-gradient(90deg, #c5a253, #b8942e);
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      font-size: 16px;
+      margin: 20px auto;
+      display: block;
+      cursor: pointer;
+      border-radius: 5px;
+      transition: background 0.3s ease;
+      z-index: 2;
+      position: relative;
+    }
+
+    button:hover {
+      background: linear-gradient(90deg, #b8942e, #a17f1d);
+    }
   </style>
 </head>
 <body>
-    <header>
-        <nav>
-            <a href="index.html"></a>
-            <a href="about.html"></a>
-            <a href="connect.html"> </a>
-            <a href="portfolio.html"></a>
-            <a href="services.html"></a>
-          </nav>
-    </header>
+  <div class="bg-decoration"></div>
 
   <section class="about-section" id="about">
     <h2>من نحن</h2>
@@ -144,6 +193,7 @@
       </p>
     </div>
   </section>
-  <script src="script.js"></script>
+
+  <button onclick="history.back()">رجوع</button>
 </body>
 </html>
