--- a/packages.html
+++ b/packages.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>باقات الانطلاق | S&F Smart Advertising</title>
-  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>الباقات التسويقية | S&F Smart Advertising</title>
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet"/>
   <style>
     body {
       font-family: 'Cairo', sans-serif;
-      background: linear-gradient(to right, #fdfbfb, #ebedee);
+      background: linear-gradient(to right, #fdfbfb, #f4f4f4);
       margin: 0;
       padding: 0;
-      color: #222;
+      color: #333;
     }
     .container {
       width: 90%;
@@ -20,34 +20,37 @@
     }
     h1 {
       text-align: center;
-      font-size: 36px;
-      color: #0d3b66;
+      font-size: 40px;
+      color: #CDA434;
+      margin-bottom: 10px;
     }
     .intro {
       text-align: center;
       font-size: 20px;
       margin-bottom: 50px;
-      color: #444;
+      color: #666;
     }
     .package {
       background: #ffffff;
+      border: 2px solid #CDA434;
       border-radius: 15px;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
-      margin-bottom: 40px;
+      box-shadow: 0 8px 25px rgba(0,0,0,0.08);
+      margin-bottom: 50px;
       padding: 30px;
-      transition: transform 0.3s;
+      transition: transform 0.3s ease;
     }
     .package:hover {
       transform: scale(1.02);
     }
     .package h2 {
-      color: #0077b6;
-      font-size: 28px;
-      margin-bottom: 10px;
+      color: #0d1b2a;
+      font-size: 30px;
+      margin-bottom: 15px;
     }
     .price {
-      font-size: 22px;
-      color: #009688;
+      font-size: 24px;
+      color: #CDA434;
+      font-weight: bold;
       margin-bottom: 20px;
     }
     table {
@@ -57,7 +60,8 @@
     }
     td {
       padding: 10px;
-      border-bottom: 1px solid #ddd;
+      border-bottom: 1px solid #eee;
+      font-size: 18px;
     }
     .gallery {
       display: flex;
@@ -69,30 +73,40 @@
       width: 250px;
       border-radius: 10px;
       flex-shrink: 0;
+      border: 2px solid #f0f0f0;
+    }
+    button {
+      padding: 12px 24px;
+      background-color: #CDA434;
+      color: #fff;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      font-size: 16px;
+      display: block;
+      margin: 30px auto;
+    }
+    button:hover {
+      background-color: #b2912e;
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>باقات الانطلاق</h1>
-    <p class="intro">نقدم حلولًا متكاملة تلبي احتياجاتك التجارية وتسهل عليك إطلاق فكرتك بأفضل الطرق التسويقية والإلكترونية.</p>
+    <h1>باقاتنا المميزة لإطلاق مشروعك</h1>
+    <p class="intro">نقدم لك حلولاً ذكية تجمع بين الإبداع والفعالية لبدء رحلتك التجارية بأعلى معايير الاحتراف.</p>
 
     <div class="package">
-      <h2>باقة إنطلاق السوشيال ميديا</h2>
+      <h2>⭐ باقة التألق الرقمي</h2>
       <p class="price">600 $</p>
       <table>
-        <tr><td>ادارة حسابات التواصل</td></tr>
-        <tr><td>انشاء الحساب</td></tr>
-        <tr><td>ملئ البينات الخاصة بالشركة بصورة احترافية</td></tr>
-        <tr><td>تقديم خطة محتوى متكاملة للسوشال ميديا</td></tr>
-        <tr><td>تصميم صورة الغلاف والبروفايل للمنصات</td></tr>
-        <tr><td>تصميم 15 منشور قياس بوست وستوري</td></tr>
-        <tr><td>تهيئة الحسابات بالمحتوى</td></tr>
-        <tr><td>جدولة المنشورات للنشر على الصفحة</td></tr>
-        <tr><td>ادارة الحملات الاعلانية</td></tr>
-        <tr><td>تجهيز الحسابات الاعلانية للمنصات</td></tr>
-        <tr><td>تجهيز اليات تتبع الاعلانات (بيكسل)</td></tr>
-        <tr><td>انشاء اعلانات تشمل (مشاهدات - رسائل واتساب - تحويل الى رابط)</td></tr>
+        <tr><td>إدارة حسابات التواصل الاجتماعي</td></tr>
+        <tr><td>إنشاء الحسابات وتعبئتها باحترافية</td></tr>
+        <tr><td>خطة محتوى متكاملة</td></tr>
+        <tr><td>تهيئة وجدولة المحتوى للنشر</td></tr>
+        <tr><td>إعداد الحملات الإعلانية</td></tr>
+        <tr><td>إعداد الحسابات الإعلانية وربط البيكسل</td></tr>
+        <tr><td>إعلانات مخصصة (مشاهدات - رسائل - تفاعل )</td></tr>
       </table>
       <div class="gallery">
         <img src="https://source.unsplash.com/featured/?socialmedia" alt="social media">
@@ -101,14 +115,15 @@
     </div>
 
     <div class="package">
-      <h2>باقة الإنطلاق الاساسية</h2>
+      <h2>👑 باقة التميز الشامل</h2>
       <p class="price">1200 $</p>
       <table>
-        <tr><td>تصميم الهوية البصرية: شعار، غلاف، بطاقة عمل، ختم</td></tr>
-        <tr><td>تصميم المواقع الالكترونية: موقع بلغة، دومين، استضافة، 5 إيميلات، 5 صفحات</td></tr>
-        <tr><td>تصميم مخصص ومتجاوب (جميع الاجهزة)</td></tr>
-        <tr><td>ادارة حسابات التواصل بنفس تفاصيل الباقة السابقة</td></tr>
-        <tr><td>ادارة الحملات الاعلانية كاملة</td></tr>
+        <tr><td>تصميم الهوية البصرية: شعار، غلاف، بطاقة، ختم</td></tr>
+         <tr><td>إنشاء كاتالوج في فيسبوك وإنستغرام وسناب</td></tr>
+         <tr><td>تصميم 15 منشور قياس بوست وستوري</td></tr>
+         <tr><td> تصميم 3ريلز</td></tr>
+        <tr><td>إدارة السوشيال ميديا بنفس تفاصيل باقة التألق</td></tr>
+        <tr><td>إدارة الحملات الإعلانية باحتراف</td></tr>
       </table>
       <div class="gallery">
         <img src="https://source.unsplash.com/featured/?branding" alt="branding">
@@ -117,15 +132,15 @@
     </div>
 
     <div class="package">
-      <h2>باقة إنطلاق المتاجر</h2>
+      <h2>🛍️ باقة المتاجر الإلكترونية</h2>
       <p class="price">900 $</p>
       <table>
-        <tr><td>إدارة حسابات التواصل بنفس التفاصيل</td></tr>
-        <tr><td>ادارة الحملات الاعلانية</td></tr>
-        <tr><td>ربط المتجر مع خدمات جوجل</td></tr>
-        <tr><td>انشاء حساب جوجل ميرشنت</td></tr>
-        <tr><td>انشاء كاتالوج مبيعات في فيسبوك - انستغرام - سناب</td></tr>
-        <tr><td>انشاء اعلانات (مشاهدات - رسائل واتساب - تحويل الى رابط)</td></tr>
+        <tr><td>إدارة حسابات التواصل كما في الباقات السابقة</td></tr>
+        <tr><td>إدارة الحملات الإعلانية</td></tr>
+        <tr><td>ربط المتجر بخدمات Google</td></tr>
+        <tr><td>إنشاء حساب Google Merchant</td></tr>
+       
+        <tr><td>إعلانات مخصصة (مشاهدات - واتساب - تفاعل)</td></tr>
       </table>
       <div class="gallery">
         <img src="https://source.unsplash.com/featured/?ecommerce" alt="ecommerce">
@@ -133,8 +148,7 @@
       </div>
     </div>
   </div>
-  <button onclick="window.location.href='start.html'" style="padding: 10px 20px; background-color: #007bff; color: white; border: none; border-radius: 5px; cursor: pointer;">
-  الرجوع إلى الصفحة السابقة
-</button>
+
+  <button onclick="window.location.href='start.html'">الرجوع إلى الصفحة السابقة</button>
 </body>
 </html>
